--- a/panel/src/app/did/list-did/list-did.component.html
+++ b/panel/src/app/did/list-did/list-did.component.html
@@ -18,14 +18,13 @@
                 </ng-container>
    
                 <ng-container matColumnDef="idsupplier">
-                  <mat-header-cell *matHeaderCellDef> ID_Supplier </mat-header-cell>
+                  <mat-header-cell *matHeaderCellDef> Supplier Id </mat-header-cell>
                   <mat-cell *matCellDef="let element"> {{element.idsupplier}} </mat-cell>
                 </ng-container>
-
-               
-  
-              
-  
+                <ng-container matColumnDef="queue_name">
+                     <mat-header-cell *matHeaderCellDef> Queue Name </mat-header-cell>
+                     <mat-cell *matCellDef="let element"> {{element.queue_name}} </mat-cell>
+                  </ng-container>
                   <ng-container matColumnDef="actions">
                   <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
                   <mat-cell *matCellDef="let row">
