--- a/panel/src/app/queue/listqueue/listqueue.component.html
+++ b/panel/src/app/queue/listqueue/listqueue.component.html
@@ -1,73 +1,84 @@
 
 
 <div fxLayout="row" fxLayoutWrap="wrap">
-  <div fxFlex.gt-sm="100" fxFlex.gt-xs="100" fxFlex="100">
-    <mat-card>
-      <mat-card-content> 
-        <div class="example-header">
-          <mat-form-field>
-            <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
-          </mat-form-field>
-        </div>
-        <div class="table-rasponsive">
-            <mat-table #table [dataSource]="dataSource" matSort>
-                
-                <ng-container matColumnDef="name">
-                  <mat-header-cell *matHeaderCellDef mat-sort-header> Name </mat-header-cell>
-                  <mat-cell *matCellDef="let element"> {{element.name}} </mat-cell>
-                </ng-container>
-   
-                <ng-container matColumnDef="strategy">
-                  <mat-header-cell *matHeaderCellDef> Strategy </mat-header-cell>
-                  <mat-cell *matCellDef="let element"> {{element.strategy}} </mat-cell>
-                </ng-container>
-  
-                <ng-container matColumnDef="maxlen">
-                  <mat-header-cell *matHeaderCellDef> Max Length </mat-header-cell>
-                  <mat-cell *matCellDef="let element"> {{element.maxlen}} </mat-cell>
-                </ng-container>
-
-                <ng-container matColumnDef="retry">
-                  <mat-header-cell *matHeaderCellDef> Retry </mat-header-cell>
-                  <mat-cell *matCellDef="let element"> {{element.retry}} </mat-cell>
-                </ng-container>
-
-                <ng-container matColumnDef="wrapuptime">
-                  <mat-header-cell *matHeaderCellDef> Wrap_Up_Time </mat-header-cell>
-                  <mat-cell *matCellDef="let element"> {{element.wrapuptime}} </mat-cell>
-                </ng-container>
-
-                <ng-container matColumnDef="announce_frequency">
-                  <mat-header-cell *matHeaderCellDef> Announce_Frequency  </mat-header-cell>
-                  <mat-cell *matCellDef="let element"> {{element.announce_frequency}} </mat-cell>
-                </ng-container>
-
-                <ng-container matColumnDef="announce_holdtime">
-                  <mat-header-cell *matHeaderCellDef> Announce Hold Time </mat-header-cell>
-                  <mat-cell *matCellDef="let element"> {{element.announceholdtime}} </mat-cell>
-                </ng-container>
-
-                <ng-container matColumnDef="ringinuser">
-                  <mat-header-cell *matHeaderCellDef> Ring_in_user </mat-header-cell>
-                  <mat-cell *matCellDef="let element"> {{element.ringinuser}} </mat-cell>
-                </ng-container>
-
+    <div fxFlex.gt-sm="100" fxFlex.gt-xs="100" fxFlex="100">
+      <mat-card>
+        <mat-card-content> 
+          <div class="example-header">
+            <mat-form-field>
+              <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+            </mat-form-field>
+          </div>
+          <div class="table-rasponsive">
+              <mat-table #table [dataSource]="dataSource" matSort>
                 
   
-                  <ng-container matColumnDef="actions">
-                  <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
-                  <mat-cell *matCellDef="let row">
-                     
-                      <button mat-raised-button color="primary" (click)="DeleteDetail(row,  row.id)">Delete</button>
-                  </mat-cell>
-                </ng-container> 
+                  <ng-container matColumnDef="queue_name">
+                      <mat-header-cell *matHeaderCellDef> Queue Name </mat-header-cell>
+                      <mat-cell *matCellDef="let element"> {{element.queue_name}} </mat-cell>
+                    </ng-container>
+     
+                  <ng-container matColumnDef="strategy">
+                    <mat-header-cell *matHeaderCellDef> Strategy </mat-header-cell>
+                    <mat-cell *matCellDef="let element"> {{element.strategy}} </mat-cell>
+                  </ng-container>
+    
+                  <ng-container matColumnDef="maxlen">
+                    <mat-header-cell *matHeaderCellDef> Max Length </mat-header-cell>
+                    <mat-cell *matCellDef="let element"> {{element.maxlen}} </mat-cell>
+                  </ng-container>
   
-                <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-                <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-          </mat-table>
-          <mat-paginator #paginator [pageSize]="10" [pageSizeOptions]="[5, 10, 20]"></mat-paginator>
-        </div>    
-      </mat-card-content>
-    </mat-card>
+                  <ng-container matColumnDef="retry">
+                    <mat-header-cell *matHeaderCellDef> Retry </mat-header-cell>
+                    <mat-cell *matCellDef="let element"> {{element.retry}} </mat-cell>
+                  </ng-container>
+  
+                 
+  
+                  <ng-container matColumnDef="extension">
+                    <mat-header-cell *matHeaderCellDef> Extension  </mat-header-cell>
+                    <mat-cell *matCellDef="let element"> {{element.extension}} </mat-cell>
+                  </ng-container>
+  
+                  <ng-container matColumnDef="announce_holdtime">
+                    <mat-header-cell *matHeaderCellDef> Announce Hold Time </mat-header-cell>
+                    <mat-cell *matCellDef="let element"> {{element.announce_holdtime}} </mat-cell>
+                  </ng-container>
+  
+                  <ng-container matColumnDef="monitor_format">
+                    <mat-header-cell *matHeaderCellDef> Monitor Format </mat-header-cell>
+                    <mat-cell *matCellDef="let element"> {{element.monitor_format}} </mat-cell>
+                  </ng-container>
+  
+                  <ng-container matColumnDef="monitor_type">
+                      <mat-header-cell *matHeaderCellDef> Monitor Type </mat-header-cell>
+                      <mat-cell *matCellDef="let element"> {{element.monitor_type}} </mat-cell>
+                    </ng-container>
+  
+                    <ng-container matColumnDef="timeout">
+                        <mat-header-cell *matHeaderCellDef> Time Out </mat-header-cell>
+                        <mat-cell *matCellDef="let element"> {{element.timeout}} </mat-cell>
+                      </ng-container>
+  
+                    
+  
+                  
+    
+                      <ng-container matColumnDef="actions">
+                          <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
+                          <mat-cell *matCellDef="let row">
+                              <!--<action [label]="'Edit'" [icon]="'fas fa-pencil-alt fa-fw'" [data]=row (onClick)="EditDetail()"></action>-->
+                              <button mat-raised-button color="primary" (click)="Edit(row)">Edit</button>
+                              <button mat-raised-button color="primary" (click)="Delete(row, row.id)">Delete</button>
+                          </mat-cell>
+                        </ng-container> 
+    
+                  <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+                  <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+            </mat-table>
+            <mat-paginator #paginator [pageSize]="10" [pageSizeOptions]="[5, 10, 20]"></mat-paginator>
+          </div>    
+        </mat-card-content>
+      </mat-card>
+      </div>
     </div>
-  </div>
