supllier module  working well with common page

--- a/panel/src/app/supplier/addsupplier/addsupplier.component.html
+++ b/panel/src/app/supplier/addsupplier/addsupplier.component.html
@@ -3,7 +3,7 @@
         <div fxFlex.gt-sm="100" fxFlex="100">
             <mat-card>
                 <mat-card-content>
-                    <mat-card-title>Add Supplier</mat-card-title>
+                    <mat-card-title>{{tag_label}}</mat-card-title>
                     <form class="basic-form" (ngSubmit)="onSubmit()" #AddSupplierForm="ngForm">
                     <div fxLayout="row" fxLayoutWrap="wrap">
                         <div fxFlex.gt-md="100" fxFlex="100">
