--- a/panel/src/app/user/adduser/adduser.component.html
+++ b/panel/src/app/user/adduser/adduser.component.html
@@ -4,7 +4,7 @@
       <mat-card>
           <mat-card-content>
               <!-- Message Form -->
-              <mat-card-title>Add User</mat-card-title>
+              <mat-card-title>{{tag_label}}</mat-card-title>
               <form class="basic-form" (ngSubmit)="onSubmit()"  #AddUserForm="ngForm">
               <div fxLayout="row" fxLayoutWrap="wrap">
                   <div fxFlex.gt-md="100" fxFlex="100">
