update  ui all  module and extension module working well with common page

--- a/panel/src/app/extension/extension/extension.component.html
+++ b/panel/src/app/extension/extension/extension.component.html
@@ -1,12 +1,13 @@
 
 <div fxLayout="row">
   <div fxFlex.gt-sm="100%" >
-      <app-addmessage></app-addmessage> 
+    <app-addextension></app-addextension>
   </div>
 </div>    
 
 <div fxLayout="row">
   <div fxFlex.gt-sm="100%" >
-      <app-listmessage></app-listmessage >
+      <app-listextension></app-listextension>
   </div>
 </div>
+
