--- a/panel/src/app/extension/editextension/editextension.component.html
+++ b/panel/src/app/extension/editextension/editextension.component.html
@@ -7,32 +7,32 @@
                 <mat-card-title>Edit Extension</mat-card-title>
                 <form class="basic-form" (ngSubmit)="onUpdate()"  #AddExtensionForm="ngForm">
                 <div fxLayout="row" fxLayoutWrap="wrap">
-                    <div fxFlex.gt-md="100" fxFlex="100">
+                  <div class="p-10" fxFlex.gt-sm="50" fxFlex.gt-xs="50" fxFlex="100">
                       <mat-form-field>
                         <input matInput placeholder="Enter User Name" [(ngModel)]="cdata.username" id="username"  name="username">
                       </mat-form-field>
                     </div>
-                    <div fxFlex.gt-sm="100" fxFlex="100">
+                    <div class="p-10" fxFlex.gt-sm="50" fxFlex.gt-xs="50" fxFlex="100">
                         <mat-form-field>
                             <input matInput placeholder="Enter Password" [(ngModel)]="cdata.secret"  id="secret" name="secret">
                         </mat-form-field>
                     </div>
-                    <div fxFlex.gt-sm="100" fxFlex="100">
+                    <div class="p-10" fxFlex.gt-sm="50" fxFlex.gt-xs="50" fxFlex="100">
                       <mat-form-field>
                         <input matInput placeholder="Enter Caller ID" [(ngModel)]="cdata.callerid" type="number"  id="callerid" name="callerid">
                       </mat-form-field>
                     </div>
-                    <div fxFlex.gt-sm="100" fxFlex="100">
+                    <div class="p-10" fxFlex.gt-sm="50" fxFlex.gt-xs="50" fxFlex="100">
                       <mat-form-field>
                         <input matInput placeholder="Enter Extension" [(ngModel)]="cdata.exten" id="exten"  name="exten">
                       </mat-form-field>
                     </div>
-                    <div fxFlex.gt-sm="100" fxFlex="100">
+                    <div class="p-10" fxFlex.gt-sm="50" fxFlex.gt-xs="50" fxFlex="100">
                       <mat-form-field>
                         <input matInput placeholder="Enter Host IP" [(ngModel)]="cdata.host" id="host"  name="host">
                       </mat-form-field>
                     </div>
-                    <div fxFlex.gt-sm="100" fxFlex="100">
+                    <div class="p-10" fxFlex.gt-sm="50" fxFlex.gt-xs="50" fxFlex="100">
                       <button mat-raised-button color="primary" type="submit">Submit</button>
                     </div>
                 </div>
