--- a/panel/src/app/user/user/user.component.html
+++ b/panel/src/app/user/user/user.component.html
@@ -1,4 +1,13 @@
-<mat-grid-list cols="1" rowHeight="2:1">
-  <mat-grid-tile><app-listuser></app-listuser></mat-grid-tile>
-  <mat-grid-tile><app-adduser></app-adduser></mat-grid-tile>
-</mat-grid-list>
+
+<div fxLayout="row">
+    <div fxFlex.gt-sm="100%" >
+        <app-adduser></app-adduser>
+    </div>
+  </div>    
+  
+  <div fxLayout="row">
+    <div fxFlex.gt-sm="100%" >
+        <app-listuser></app-listuser>
+    </div>
+  </div>
+  
