Dashboard data issue solved
Dashboard data issue is solved

--- a/panel/src/app/home/dashboard/dashboard.component.html
+++ b/panel/src/app/home/dashboard/dashboard.component.html
@@ -1,4 +1,3 @@
-<p>Dashboard</p>
-<div fxLayout="row" fxLayoutWrap="wrap">
-    <widget-group [data]=widgetdata></widget-group>
+<div width="100%">
+    <widget-group [data]="widgetdata"></widget-group>
 </div>
