Google Chat Testing
Google Chart testing

--- a/panel/src/app/home/dashboard/dashboard.component.html
+++ b/panel/src/app/home/dashboard/dashboard.component.html
@@ -1,3 +1,8 @@
 <div width="100%">
     <widget-group [data]="widgetdata"></widget-group>
 </div>
+
+<google-chart [data]="pieChartData"></google-chart>
+<google-chart [data]="lineChartData"></google-chart>
+<google-chart [data]="comboChartData"></google-chart>
+<google-chart [data]="geoChartData"></google-chart>
