--- a/panel/src/app/campaign/addcampaign/addcampaign.component.html
+++ b/panel/src/app/campaign/addcampaign/addcampaign.component.html
@@ -2,7 +2,7 @@
   <div fxFlex.gt-sm="100" fxFlex="100">
       <mat-card>
           <mat-card-content>
-              <mat-card-title>Add Campaign</mat-card-title>
+              <mat-card-title>{{tag_label}}</mat-card-title>
               <!-- ============================================================== -->
               <!-- column -->
               <!-- ============================================================== -->
