--- a/panel/src/app/queue/editqueue/editqueue.component.html
+++ b/panel/src/app/queue/editqueue/editqueue.component.html
@@ -4,7 +4,7 @@
         <mat-card>
             <mat-card-content>
                 <!-- Message Form -->
-                <mat-card-title>Edit Queue</mat-card-title>
+                <mat-card-title>{{tag_label}}</mat-card-title>
                 <form class="basic-form" (ngSubmit)="onUpdate()"  #AddQueueForm="ngForm">
 
                     <div fxFlex.gt-sm="100" fxFlex="100">
