--- a/panel/src/app/leads/uploadleads/uploadleads.component.html
+++ b/panel/src/app/leads/uploadleads/uploadleads.component.html
@@ -1,26 +1,31 @@
 <div fxLayout="row" fxLayoutWrap="wrap">
-  <div fxFlex.gt-sm="100" fxFlex="100">
-      <mat-card>
-          <mat-card-content>
-              <mat-card-title>Upload Leads</mat-card-title>
-             
-              <form class="basic-form" (ngSubmit)="onSubmit()" #UploadForm="ngForm">
-              <div fxLayout="row" fxLayoutWrap="wrap">
-              <div fxFlex.gt-sm="100" fxFlex="100">
-                 <mat-form-field  *ngIf="campaign">
-                 <mat-select placeholder="Select Campaign" [(ngModel)]="cdata.id_campaign" name="id_campaign">
-                   <mat-option value="option">Select Campaign</mat-option>
-                    <mat-option *ngFor="let c of campaign" [value]="c.id">{{c.name}}</mat-option>
-                  </mat-select>
-              </mat-form-field>
-                 </div>
-               <input id="filename" name="filename" type="file" />
-                   <div fxFlex.gt-sm="100" fxFlex="100">
-                     <button mat-raised-button color="primary" type="submit">Submit</button>
-                    </div> 
-                </div>
-              </form>      
-          </mat-card-content>
-      </mat-card>
+    <div fxFlex.gt-sm="100" fxFlex="100">
+        <mat-card>
+            <mat-card-content>
+                <mat-card-title>Upload Leads</mat-card-title>
+               
+                <form class="basic-form" (ngSubmit)="onSubmit()" #UploadForm="ngForm">
+              
+           
+                      <mat-grid-list cols="1" rowHeight="100px">
+                              <mat-grid-tile>
+                                          <mat-form-field  *ngIf="campaign">
+                                                  <mat-select placeholder="Select Campaign" [(ngModel)]="cdata.id_campaign" name="id_campaign">
+                                                  <mat-option value="option">Select Campaign</mat-option>
+                                                  <mat-option *ngFor="let c of campaign" [value]="c.id">{{c.name}}</mat-option>
+                                                  </mat-select>
+                                          </mat-form-field>
+                          </mat-grid-tile>
+                      </mat-grid-list>
+                  
+                 
+                   <mat-grid-list cols="2" rowHeight="100px">
+                          <mat-grid-tile><input id="filename" class="form-control b-b margin-bottom" name="filename" type="file" />
+                          </mat-grid-tile>
+                          <mat-grid-tile> <button mat-raised-button color="primary" type="submit">Submit</button></mat-grid-tile>
+                          </mat-grid-list> 
+                </form>      
+            </mat-card-content>
+        </mat-card>
+    </div>
   </div>
-</div>
