--- a/panel/src/app/shared/widget-group/widget-group.component.html
+++ b/panel/src/app/shared/widget-group/widget-group.component.html
@@ -1,6 +1,6 @@
 <mat-grid-list cols="{{column}}" rowHeight="2:1">
     <mat-grid-tile *ngFor="let row of data">  <!-- column -->    
-      <div fxFlex.gt-sm="15" fxFlex.gt-xs="15" fxFlex="50">
+      <div fxFlex.gt-sm="15" fxFlex.gt-xs="15" fxFlex="50" class="width-value" >
         <mat-card>
           <mat-card-content>
               <!-- Row -->
@@ -12,7 +12,7 @@
                       </button>
                   </div> 
                   <!-- column -->
-                  <div>
+                  <div class="margin">
                       <h3 class="m-0">{{row.data}}</h3>
                       <h6 class="text-muted m-0">{{row.label}}</h6>
                   </div> 
