Campaign Layout changed
Campaign Layout changed

--- a/panel/src/app/campaign/campaign/campaign.component.html
+++ b/panel/src/app/campaign/campaign/campaign.component.html
@@ -1,6 +1,6 @@
 
 <div fxLayout="row">
-  <div fxFlex.gt-sm="100%" >
+  <div fxFlex.gt-sm="100%" *ngIf="status">
     <app-addcampaign></app-addcampaign>
   </div>
 </div>    
