--- a/panel/src/app/campaign/listcampaign/listcampaign.component.html
+++ b/panel/src/app/campaign/listcampaign/listcampaign.component.html
@@ -4,12 +4,19 @@
     <mat-card>
       <mat-card-content> 
         <div class="example-header">
-          <mat-form-field>
-            <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
-          </mat-form-field>
+          <mat-grid-list cols="4" rowHeight="40px">
+            <mat-grid-tile [colspan]=3>
+              <mat-form-field>
+                <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+              </mat-form-field>
+            </mat-grid-tile>
+            <mat-grid-tile>
+              <button mat-raised-button color="primary" (click)="AddNew()"><mat-icon>add</mat-icon></button>
+            </mat-grid-tile>
+          </mat-grid-list>
         </div>
-        <div class="table-rasponsive">
-            <mat-table #table [dataSource]="dataSource" matSort>
+        <div>
+            <mat-table #table [dataSource]="dataSource" matSort data-ng-class-even="" data-ng-class-odd="">
                 <!-- Position Column 'name', 'provider', 'filename', 'channels', 'ppm', 'ringtime', 
                   'answertime', 'status'-->
                 <ng-container matColumnDef="name">
@@ -61,8 +68,8 @@
                   <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
                   <mat-cell *matCellDef="let row">
                       <!--<action [label]="'Edit'" [icon]="'fas fa-pencil-alt fa-fw'" [data]=row (onClick)="EditDetail()"></action>-->
-                      <button mat-raised-button color="primary" (click)="Edit(row)">Edit</button>
-                      <button mat-raised-button color="primary" (click)="Delete(row,  row.id)">Delete</button>
+                      <button mat-icon-button color="primary" (click)="Edit(row)"><mat-icon>edit</mat-icon></button>
+                      <button mat-icon-button color="primary" (click)="Delete(row,  row.id)"><mat-icon>delete</mat-icon></button>
                   </mat-cell>
                 </ng-container> 
 
